test/tests/stages/13_floating-point_numbers/valid/extra_credit/compound_assign.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[45]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(10.0)
  ;
  identifier(d)
  /=
  const double(4.0)
  ;
  if
  (
  identifier(d)
  !=
  const double(2.5)
  )
  {
  return
  const int(1)
  ;
  }
  identifier(d)
  *=
  const double(10000.0)
  ;
  if
  (
  identifier(d)
  !=
  const double(25000.0)
  )
  {
  return
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
