test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/switch_double_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  switch
  (
  identifier(x)
  )
  {
  case
  const double(1.0)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(4)
  ;
  }
  }
